--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -492,7 +492,7 @@ In this activity diagram, the catch-all term 'report' is used to encompass the a
 
 The incident search mechanism features a set of different types of searches that a user could utilise to list out all related incidents, regardless of status of report. Further documentation on the commands available in this set can be found in the User Guide. It is facilitated by the List Incidents Command and the Find Incidents Command. To differentiate the reports by statuses, the Incident Filling and Submission feature cover these capabilities already, as mentioned earlier.
 
-===== Overview of Finding and Listing commands
+===== Overview of Running Find Incidents and List Incidents commands
 
 . Listing all - Displays all incidents in `Model`, taking in no parameters +
 eg. `list-i`
@@ -515,27 +515,39 @@ eg. `find-i self`
 * Search by keywords is case-insensitive for convenience and ease of use
 * Each parameter in `find-i` search commands can be combined in any order and quantity, returning only results that return a match in all predicates indicated
 * Each parameter in `find-i` accepts multiple keywords, and searches for matches containing any or all of these keywords
-* `find-i` can take in
+* `find-i` can take in multiple parameters of the same prefix, taking only the last valid parameter of each prefix
 ****
 
-The incident search mechanism is facilitated by `ModelManager`, which implements abstract class `Model`. It contains a `FilteredList<Incidents> filteredIncidents`, which internally stores the list of displayed incidents in the GUI. Additionally, it implements the following key method:
-* `updateFilteredIncidentsList(Predicate<Incident> predicate)` - Updates the stored filtered incidents list with the new predicate
+===== Overview of Implementation of Find Incidents and List Incidents commands
+* The incident search mechanism is facilitated by `ModelManager`, which implements abstract class `Model`.
+* `ModelManager` contains a `FilteredList<Incidents> filteredIncidents`, which internally stores the list of displayed incidents in the GUI.
+*  `filteredIncidents` implements the following key methods utilised in the List Incidents and Find Incidents command: +
+    ** `updateFilteredIncidentsList(Predicate<Incident> predicate)` - Updates the stored filtered incidents list with the new predicate +
+    ** `getFilteredIncidentsList()` - Returns full list of all incidents
 
-There are two possible commands within this set of searches. Firstly, we will consider when the user calls the command `list-i` in the application.
 
-The following sequence diagram shows how the `list-i` command works:
+===== Implementation of List Incidents Command
+
+The following sequence diagram shows how the `list-i` command works when `list-i` is called:
 
 image::ListIncidentsSequenceDiagram.png[]
 
-As indicated in the diagram, the `LogicManager` instantiates a `ListIncidentsCommand` upon running command `execute(list-i)`. It then calls `ListIncidentsCommand#execute()`, which runs `Model#updateFilteredIncidentList` with the predicate `PREDICATE_SHOW_ALL_INCIDENTS`. This `Predicate<Incident>` always evaluates to true. This `Predicate<Incident>` is passed to `FilteredList<Incident> filteredList`, as a parameter to run the method `setPredicate()`. This updates the list of visible incidents. `CommandResult commandResult` is also returned to the `LogicManager` to log the success/failure of the method.
+* The `LogicManager` passes the command to `IncidentManagerParser` when running command `execute("list-i")`, which instantiates a `ListIncidentsCommand` with `Predicate<Incident> PREDICATE_SHOW_ALL_INCIDENTS` that returns all incidents regardless of state.
+* The `LogicManager` then calls `ListIncidentsCommand#execute()`, which runs `ListIncidentsCommand#handleAllIncidents()`, a private method within `ListIncidentsCommand`.
+* `handleAllIncidents()` runs `Model#updateFilteredIncidentList()` with `Predicate<Incident> PREDICATE_SHOW_ALL_INCIDENTS`, which always evaluates to true.
+* This `Predicate<Incident>` is passed to `FilteredList<Incident> filteredList`, as a parameter to run the method `filteredList#setPredicate()`.
+* The list of visible incidents is updated.
+* `CommandResult commandResult` is returned to the `LogicManager` to log the success/failure of the method.
 
-Next, we will look at an example in which the user calls `search` to look for incidents written by an operator whose name contains `Alex`.
+===== Implementation of Find Incidents Command
+
+Next, we will look at an example in which the user calls `find-i` to look for incidents written by an operator whose name contains `Alex`.
 
 The execution of this method is a little more complex.
 
 The following sequence diagram shows how the `search` command identifies the keyword and flag, and returns related incidents:
 
-image::SearchIncidentsSequenceDiagram.png[]
+image::FindIncidentsSequenceDiagram.png[]
 
 The key difference is the utility of the `SearchIncidentsCommandParser` to parse the keyword after tag `op\` in the command. It creates a `NameKeywordsPredicate` using the String "Alex", which is returned to be used in constructing a new instance of `SearchIncidentsCommand`, stored as a `Predicate<Incident> predicate`. From there, the process is similar, in that `SearchIncidentsCommand#execute()` is run, causing the Model to run `Model#updateFilteredIncidentList(predicate)` using the predicate stored in `SearchIncidentsCommand`. Upon updating the list similar to the `incidents` listing command above, `SearchIncidentsCommand` also calls `Model#getFilteredIncidentList()` to return `ObservableList<Incident>`. It obtains the size of this list, and returns it in `CommandResult commandResult`.
 
