--- a/docs/team/zhixianggg.adoc
+++ b/docs/team/zhixianggg.adoc
@@ -41,8 +41,8 @@ This would make it convenient for them to copy data out of the application.
 
 * contributed a total of 11k+ LOC:
 
-** ~5k functional: https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=zhixianggg&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false&tabOpen=true&tabType=authorship&tabAuthor=zhixianggg&tabRepo=AY1920S1-CS2103T-T09-4%2Fmain%5Bmaster%5D[functional code]
-** 6k+ test: https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=zhixianggg&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false&tabOpen=true&tabType=authorship&tabAuthor=zhixianggg&tabRepo=AY1920S1-CS2103T-T09-4%2Fmain%5Bmaster%5D[test code]
+** ~5k functional: https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=zhixianggg
+** 6k+ test: https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=zhixianggg
 
 * Functional
 
@@ -60,7 +60,7 @@ https://github.com/AY1920S1-CS2103T-T09-4/main/pull/119[#119], https://github.co
 * *Other contributions*:
 
 ** Project management:
-*** Managed releases `v1.3.1` and `v1.3.2` (2 releases) on GitHub
+*** Managed releases `v1.3.1`, `v1.3.2` and `v1.4.1` (3 releases) on GitHub
 
 ** Enhancements to existing features:
 *** Created an Archived Order Tab Panel (backend) as we realise that there was too much clutter in the order tab. https://github.com/AY1920S1-CS2103T-T09-4/main/pull/148[#148]
