Add complete PPP barring references to UG and DG sections

--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -30,7 +30,7 @@ image::aulud.png[width="150", align="left"]
 {empty}[https://github.com/Aulud[github]]
 
 Role: Developer +
-Responsibilities: Data
+Responsibilities: UI
 
 '''
 
